--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>jQuery Mobile Bootstrap Theme</title>
 	</head>
 	<body>
@@ -12,21 +10,17 @@
 				<div data-role="navbar">
 					<ul>
 						<li><a href="index.html" data-icon="home" class="ui-btn-active">Home</a></li>
-						<li><a href="buttons.html" data-icon="star">Buttons</a></li>
-						<li><a href="listviews.html" data-icon="grid">Lists</a></li>
-						<li><a href="nav.html" data-icon="search">Nav</a></li>
-						<li><a href="forms.html" data-icon="gear">Forms</a></li>
 					</ul>
 				</div>
 			</div>
 			<div data-role="content" data-theme="a">
 
-				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-role="button" data-icon="star">Get the code</a>
+				
 
 				<h2>Overview</h2>
 
 				<p>
-					The jQuery Mobile Bootstrap theme is meant to duplicate the appearance of <a href="http://twbs.github.io/bootstrap/">Bootstrap</a> within the context of a jQuery Mobile application. Currently only the colors are mimiced, but eventually some of the components might also work their way into the theme.
+					The jQuery Mobile Bootstrap theme is meant to duplicate the appearance of 
 				</p>
 
 			</div>
